--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -1,65 +1,89 @@
 {% extends 'store/layouts/main.html' %}
 
 {% block content %}
-    {% include 'store/inc/slider.html' %}
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+   {% include 'store/inc/slider.html' %}
 
 
 
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-.loader {
-  border: 16px solid #f3f3f3;
-  border-radius: 50%;
-  border-top: 16px solid #efead1;
-  border-right: 16px solid rgb(234, 230, 221);
-  border-bottom: 16px solid #f1e3af;
-  border-left: 16px solid #faf0d3;
-  width: 120px;
-  height: 120px;
-  -webkit-animation: spin 2s linear infinite;
-  animation: spin 2s linear infinite;
-  margin:auto;
-  left:0;
-  right:0;
-  top:0;
-  bottom:0;
-  position : center;
-}
+<div class="container my-5">
+    <div class="row">
+        <div class="col-md-12">
+            <h3>Trending Products</h3>
+            <hr>
+            <div class="row owl-carousel owl-theme">
+            {% for item in trending_products %}
+                <div class="product_data item">
+                    <div class="card">
+                        <div class="card-body">
+                          <a href="{% url 'productview' item.category.slug item.slug %}">
+                            <div class="category-images">
+                                <img src="{{ item.product_image.url }}" alt="Category image" class="w-100" />
+                            </div>
+                            <h4 class="text-center"> {{ item.name}}</h4>
+                          </a>
+                             <center>   Price: {{ item.selling_price }}€  <center>
+                            <br>
+                            <div class="row mt-2">
+                                      <div class="col-md-6">
+                                        {% csrf_token %}
+                                        <input type="hidden" value="{{ item.id}}" class="prod_id">
+                                        <label for="Quantity">Quantity</label>
+                                        <div class="input-group text-center mb-3">
+                                          <button class="input-group-text decrement-btn">-</button>
+                                          <input type="text" name="quantity" class="form-control qty-input text-center" value="1" >
+                                          <button class="input-group-text increment-btn">+</button>
+                                        </div>
+                                  </div>
+                                  <div class="col-md-6 px-0">
+                                  <br>
+                                     <span class="mb-2">
+                                          {% if item.quantity > 0 %}
+                                                <button type="button" class="btn btn-primary btn-sm me-3 addToCartBtn"> Add to Cart <i class="fa fa-shopping-cart"></i></button>
+                                          {% else %}
+                                                <button type="button" class="btn btn-danger btn-sm me-3 disabled "> Out of Stock </button>
+                                          {% endif %}
+                                     </span>
+                                    </div>
+                               </div>
+                            </div>
+                       </div>
+                  </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
-@-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
-}
 
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
 
-h2 {text-align: center;}
-</style>
-</head>
-<body>
 
-<h2>Coming soon....</h2>
 
-<div class="loader"></div>
-{% endblock %}
-</body>
-</html>
+{% endblock content %}
+
+{% block scripts %}
+<script>
+
+    $('.owl-carousel').owlCarousel({
+    loop:true,
+    margin:10,
+    nav:true,
+    responsive:{
+        0:{
+            items:1
+        },
+        600:{
+            items:3
+        },
+        1000:{
+            items:4
+        }
+    }
+})
+
+
+</script>
+
+{% endblock scripts %}
